--- a/src/output.css
+++ b/src/output.css
@@ -801,6 +801,10 @@ video {
   height: 2.5rem;
 }
 
+.h-32 {
+  height: 8rem;
+}
+
 .h-\[650px\] {
   height: 650px;
 }
@@ -853,14 +857,6 @@ video {
   height: 0.5rem;
 }
 
-.h-\[400px\] {
-  height: 400px;
-}
-
-.h-32 {
-  height: 8rem;
-}
-
 .w-52 {
   width: 13rem;
 }
@@ -907,6 +903,10 @@ video {
 
 .w-10 {
   width: 2.5rem;
+}
+
+.w-\[400px\] {
+  width: 400px;
 }
 
 .w-\[200px\] {
@@ -963,14 +963,6 @@ video {
 
 .w-1\/4 {
   width: 25%;
-}
-
-.w-\[400px\] {
-  width: 400px;
-}
-
-.w-\[800px\] {
-  width: 800px;
 }
 
 .basis-1\/2 {
@@ -1169,14 +1161,14 @@ video {
   border-radius: 14px;
 }
 
-.rounded-b-lg {
-  border-bottom-right-radius: 0.5rem;
-  border-bottom-left-radius: 0.5rem;
-}
-
 .rounded-t-lg {
   border-top-left-radius: 0.5rem;
   border-top-right-radius: 0.5rem;
+}
+
+.rounded-b-lg {
+  border-bottom-right-radius: 0.5rem;
+  border-bottom-left-radius: 0.5rem;
 }
 
 .rounded-tr-\[158px\] {
@@ -1278,11 +1270,6 @@ video {
 .bg-red-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(239 68 68 / var(--tw-bg-opacity));
-}
-
-.bg-blue-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(96 165 250 / var(--tw-bg-opacity));
 }
 
 .p-2 {
@@ -1655,11 +1642,6 @@ video {
   border-radius: 14px;
 }
 
-.hover\:bg-white:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
 .hover\:bg-gray-200:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(229 231 235 / var(--tw-bg-opacity));
@@ -1673,11 +1655,6 @@ video {
 .hover\:bg-\[\#5f1e75\]:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(95 30 117 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-blue-400:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(96 165 250 / var(--tw-bg-opacity));
 }
 
 .hover\:text-gray-900:hover {
@@ -1702,10 +1679,6 @@ video {
   --tw-shadow: 0px 7px 16px rgba(0,0,0,0.14);
   --tw-shadow-colored: 0px 7px 16px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.hover\:duration-700:hover {
-  transition-duration: 700ms;
 }
 
 .focus\:border-blue-500:focus {
@@ -2138,6 +2111,10 @@ video {
 
   .max-sm\:w-\[90\%\] {
     width: 90%;
+  }
+
+  .max-sm\:w-\[200px\] {
+    width: 200px;
   }
 
   .max-sm\:space-x-0 > :not([hidden]) ~ :not([hidden]) {
